Summary: | ASTERISK-23275: CLI command 'pjsip show registrations' missing | ||
Reporter: | George Joseph (gjoseph) | Labels: | |
Date Opened: | 2014-02-11 07:21:52.000-0600 | Date Closed: | 2014-02-21 11:11:02.000-0600 |
Priority: | Major | Regression? | |
Status: | Closed/Complete | Components: | Resources/res_pjsip |
Versions: | 12.0.0 12.1.0 | Frequency of Occurrence | |
Related Issues: | |||
Environment: | Attachments: | ||
Description: | both pjsip show endpoints and pjsip show transports exist, to counterpart the singular that gives more detail.
However, pjsip show registrations does not exist, you need to run pjsip show registration <registration_name> It's not consistent is the main thing, and someone may want to be able to see all registrations listed. | ||
Comments: | By: Rusty Newton (rnewton) 2014-02-11 11:36:12.555-0600 George Joseph has written all the PJSIP CLI commands so far (with great results). I'm not sure if he is still working on additional commands, so I'll add him to the issue watchers and use this issue to ping him. I do think "pjsip show registrations" would be an excellent addition. By: Rusty Newton (rnewton) 2014-02-11 11:39:00.260-0600 Actually I forgot you can't set issues to Waiting on Feedback for users that are not the reporter or a participant already. I'll ping George via E-mail. By: George Joseph (gjoseph) 2014-02-11 11:40:27.897-0600 An oversight on my part. I can knock this out in the next few days. By: George Joseph (gjoseph) 2014-02-11 11:59:40.841-0600 Oh, you know you can do 'pjsip list registrations" right? Maybe an explanation of list vs show is needed... show an individual object (show registration blah) dumps as much information about that object as possible. show objects (show registrations) prints a multi-line list. list objects (list registrations) prints a single line list. In this case, registrations didn't have enough info to warrant a multi-line list so I didn't include show registrations. I could simply add show as a synonym for list though. By: Joshua C. Colp (jcolp) 2014-02-11 12:08:56.743-0600 I'd just alias it for that command so we don't run into this again. May be a good idea to have a rule that there should always be a list and show. By: Rusty Newton (rnewton) 2014-02-11 12:19:54.321-0600 bq. I'd just alias it for that command so we don't run into this again. May be a good idea to have a rule that there should always be a list and show. +1 By: Rusty Newton (rnewton) 2014-02-11 13:29:38.267-0600 Changed reported to George Joseph so that I can assign it to him. Just the way we have JIRA setup at the moment. By: George Joseph (gjoseph) 2014-02-11 14:02:46.916-0600 Added 'pjsip show registrations' which outputs the same as the list command. Added 'pjsip show contacts' as well. Patch uploaded to reviewboard. |