pjsip_cli: Add pjsip commands 'show registrations' and 'show contacts'.

Added 'show registrations' and 'show contacts' to pjsip cli to make things
a little more consistent.  The output is exactly the same as the list command.

Just needed to add entries to their respective ast_cli_entry structures.

(closes issue ASTERISK-23275)
Review: http://reviewboard.asterisk.org/r/3210/



git-svn-id: https://origsvn.digium.com/svn/asterisk/branches/12@408522 65c4cc65-6c06-0410-ace0-fbb531ad65f3